@@ -83,7 +83,6 @@ my $requires = {
                 'npg_common::Alignment'                    => 0,
                 'npg_common::extractor::fastq'             => 0,
                 'npg_common::roles::software_location'     => 0,
-                'npg_common::sequence::reference::base_count'  => 0,
                 'npg_tracking::data::reference::list'      => 0,
                 'npg_tracking::data::bait::find'           => 0,
                 'npg_tracking::data::geno_refset::find'    => 0,
